--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-aiohttp==3.7.4.post0
+aiohttp==3.8.4
+aiosignal==1.3.1
 asgiref==3.5.2
-async-timeout==3.0.1
+async-timeout==4.0.2
 attrs==21.4.0
 black==22.3.0
 certifi==2022.12.7
@@ -9,11 +10,12 @@ charset-normalizer==2.0.12
 click==8.1.3
 cycler==0.11.0
 discord==1.7.3
-discord.py==1.7.3
-Django==3.2.16
+discord.py==2.2.2
+Django==3.2.18
 django-extensions==3.2.0
 django-model-utils==4.2.0
 fonttools==4.33.3
+frozenlist==1.3.3
 idna==3.3
 importlib-metadata==4.11.4
 jsonfield==3.1.0
@@ -33,7 +35,7 @@ python-dotenv==0.20.0
 pytz==2022.1
 requests==2.27.1
 six==1.16.0
-sqlparse==0.4.2
+sqlparse==0.4.4
 tomli==2.0.1
 typed-ast==1.5.4
 typing_extensions==4.2.0
