--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-aiohttp==3.8.5
+aiohttp==3.9.1
 aiosignal==1.3.1
-asgiref==3.5.2
+asgiref==3.7.2
 async-timeout==4.0.2
 attrs==21.4.0
 black==22.3.0
@@ -11,7 +11,7 @@ click==8.1.3
 cycler==0.11.0
 discord==1.7.3
 discord.py==2.2.2
-Django==3.2.20
+Django==4.2.9
 django-extensions==3.2.0
 django-model-utils==4.2.0
 fonttools==4.33.3
@@ -26,7 +26,7 @@ mypy-extensions==0.4.3
 numpy==1.24.1
 packaging==21.3
 pathspec==0.9.0
-Pillow==10.1.0
+pillow==10.2.0
 platformdirs==2.5.2
 psycopg2==2.9.5
 pyparsing==3.0.9
@@ -39,6 +39,6 @@ sqlparse==0.4.4
 tomli==2.0.1
 typed-ast==1.5.4
 typing_extensions==4.2.0
-urllib3==2.0.6
+urllib3==2.1.0
 yarl==1.7.2
 zipp==3.8.0
